--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="./css/main.min.css">
 </head>
 <body>
-    <header class="header">
+    <header class="header mob-adapt">
         <div class="conteiner header__conteiner ">
             <div class="gt">
                 <a class="logo" href="https://www.google.com/">
@@ -114,7 +114,7 @@
     </header>
     <main>
         <!--nav-button-->
-        <section class="section">
+        <section class="section mob-adapt">
             <div class="conteiner">
             <h1 class="invisible-header">Nav-button</h1>
             <!-- <div class="flex-container"> -->
