--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <div class="conteiner header__conteiner header__conteiner--adapt ">
             <div class="gt">
                 <a class="logo" href="https://www.google.com/">
-                    <span class="logo__web">Web</span>
-                    <span class="logo__studio">Studio</span></a>
+                    <span class="logo__web">Web</span><span class="logo__studio">Studio</span></a>
+                    
             
                 <button class="menu-mobile is-open" type="button" aria-expanded="false" data-menu-button>
                     <svg class="btn-mob" width="40px" height="40px" aria-controls="mobile-menu" aria-label="Переключатель мобильного меню ">
@@ -60,9 +60,9 @@
                                     info@devstudio.com</a>
                             </li>
                         </ul>
-                        <ul class="mob-menu-social">
-                            <li class="mob-menu-social__item  ">
-                                <a class="mob-menu-social__link " href="#">instagram</a>
+                        <ul class="mob-menu-social ">
+                            <li class="mob-menu-social__item">
+                                <a class="mob-menu-social__link mob-menu-social__link--first " href="#">instagram</a>
                             </li>
                             <li class="mob-menu-social__item">
                                 <a class="mob-menu-social__link" href="#">twitter</a>
@@ -71,7 +71,7 @@
                                 <a class="mob-menu-social__link" href="#">facebook</a>
                             </li>
                             <li class="mob-menu-social__item">
-                                <a class="mob-menu-social__link" href="#">linkedin</a>
+                                <a class="mob-menu-social__link mob-menu-social__link--last" href="#">linkedin</a>
                             </li>
                         </ul>
                     </div>
@@ -115,7 +115,7 @@
     <main>
         <section class="hero">
             <div class="conteiner conteiner--mob-adaptiv">
-                <h1 class="hero__title">Эффективные решения для вашего бизнеса</h1>
+                <h1 class="hero__title">Эффективные решения <br> для вашего бизнеса</h1>
                 <button data-modal-open type="button" class="hero__button ">Заказать услугу</button>
             </div>
         </section>
@@ -499,11 +499,10 @@
 
 <footer class="footer-bg">
     <div class="conteiner footer-conteiner">
-        <div class="footer-adaptive">
+        <div class="footer-adapt  ">
             <div class="footer-bg-flex">
                 <a class="logo-fr" href="https://www.google.com/">
-                    <span class="logo-fr__web--accent">Web</span>
-                    <span>Studio</span>
+                    <span class="logo-fr__web--accent">Web</span><span>Studio</span>
                 </a>
                 <address class="footer-adress">
                     <ul class="contacts-list list">
