--- a/portfolio.html
+++ b/portfolio.html
@@ -19,8 +19,7 @@
         <div class="conteiner header__conteiner ">
             <div class="gt">
                 <a class="logo" href="https://www.google.com/">
-                    <span class="logo__web">Web</span>
-                    <span class="logo__studio">Studio</span></a>
+                    <span class="logo__web">Web</span><span class="logo__studio">Studio</span></a>
             
             <button class="menu-mobile is-open" type="button" aria-expanded="false" data-menu-button>
                         <svg width="40px" height="40px" aria-controls="mobile-menu" aria-label="Переключатель мобильного меню ">
@@ -372,11 +371,10 @@
 
 <footer class="footer-bg">
     <div class="conteiner footer-conteiner">
-        <div class="footer-adaptive">
+        <div class="footer-adapt ">
             <div class="footer-bg-flex">
                 <a class="logo-fr" href="https://www.google.com/">
-                    <span class="logo-fr__web--accent">Web</span>
-                    <span>Studio</span>
+                    <span class="logo-fr__web--accent">Web</span><span>Studio</span>
                 </a>
                 <address class="footer-adress">
                     <ul class="contacts-list list">
